body overflow hidden (bug num browser)

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,6 +24,7 @@ body {
   line-height: 1.6;
   color: $color-primary;
   letter-spacing: 0.5px;
+  overflow-x: hidden;
 }
 
 *,
